--- a/Todo.Core/Todo.Core.csproj
+++ b/Todo.Core/Todo.Core.csproj
@@ -11,6 +11,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.8" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.8" />
     </ItemGroup>
 
