--- a/Todo.Api/Todo.Api.csproj
+++ b/Todo.Api/Todo.Api.csproj
@@ -26,4 +26,8 @@
       <ProjectReference Include="..\Todo.Core\Todo.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
