Added to reference Todo.Api
Co-Authored-By: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

--- a/Todo.Web/Todo.Web.csproj
+++ b/Todo.Web/Todo.Web.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Todo.Api\Todo.Api.csproj" />
       <ProjectReference Include="..\Todo.Core\Todo.Core.csproj" />
     </ItemGroup>
 
