Bugfix/replace placeholder values for login (#8)
* Added a reference to Todo.Core

* Using the correct ApplicationUser

Co-Authored-By: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

* Added List for TodoItems in TodoListDto.cs and added TodoList for ProjectDto.cs

* Updated mapper to also show List of TodoItems and TodoLists

* Added to reference Todo.Api

Co-Authored-By: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

* Using dto files

Co-Authored-By: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

* Removed @using statement

Co-Authored-By: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

* Removed Unnecessary

Co-Authored-By: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

* changed menu

Co-Authored-By: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

---------

Co-authored-by: Zaid Sheikh <Zaidsh02@gmail.com>

--- a/Todo.Web/Todo.Web.csproj
+++ b/Todo.Web/Todo.Web.csproj
@@ -18,4 +18,9 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Todo.Api\Todo.Api.csproj" />
+      <ProjectReference Include="..\Todo.Core\Todo.Core.csproj" />
+    </ItemGroup>
+
 </Project>
