Configuration of Smtp settings

--- a/Todo.Api/appsettings.Development.json
+++ b/Todo.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SmtpSettings": {
+    "Host": "smtp.your-email-provider.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "Username": "taskify.webservice2024@gmail.com",
+    "Password": "Nogetfornu42"
   }
 }
