App passcode and register EmailService in program.cs so that it can be injected

--- a/Todo.Api/appsettings.Development.json
+++ b/Todo.Api/appsettings.Development.json
@@ -6,10 +6,10 @@
     }
   },
   "SmtpSettings": {
-    "Host": "smtp.your-email-provider.com",
+    "Host": "smtp.gmail.com",
     "Port": 587,
     "EnableSSL": true,
     "Username": "taskify.webservice2024@gmail.com",
-    "Password": "Nogetfornu42"
+    "Password": "jlivpgybkrxnpjmj"
   }
 }
